--- a/notebooks/01b-basic-classification.ipynb
+++ b/notebooks/01b-basic-classification.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"TensorFlow for Classification Problems\"\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
