--- a/notebooks/02b-imdb.ipynb
+++ b/notebooks/02b-imdb.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
-   "source": []
+   "source": [
+    "---\n",
+    "title: \"IMDB\"\n",
+    "---"
+   ]
   },
   {
    "cell_type": "code",
