--- a/notebooks/02a-mnist.ipynb
+++ b/notebooks/02a-mnist.ipynb
@@ -1,10 +1,13 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
-   "source": []
+   "source": [
+    "---\n",
+    "title: \"MNIST\"\n",
+    "---"
+   ]
   },
   {
    "cell_type": "code",
