--- a/notebooks/03a-handling-text.ipynb
+++ b/notebooks/03a-handling-text.ipynb
@@ -1,11 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "title: \"Handling Text Data\"\n",
+    "---"
+   ]
   }
  ],
  "metadata": {
