Rename notebook file names

--- a/notebooks/01b-basic-regression.ipynb
+++ b/notebooks/01b-basic-regression.ipynb
@@ -5,15 +5,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"TensorFlow 2 for Regression Problems\"\n",
-    "author: \"Hanzholah Shobri\"\n",
-    "date: \"02/28/2023\"\n",
+    "title: \"Dealing with Regression Problems\"\n",
     "draft: false\n",
     "freeze: true\n",
-    "categories:\n",
-    "  - Python\n",
-    "  - Tensorflow\n",
-    "  - Deep Learning\n",
     "---"
    ]
   },
