--- a/notebooks/01c-basic-classification.ipynb
+++ b/notebooks/01c-basic-classification.ipynb
@@ -5,15 +5,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"TensorFlow 2 for Classification Problems\"\n",
-    "author: \"Hanzholah Shobri\"\n",
-    "date: \"02/29/2023\"\n",
+    "title: \"Dealing with Classification Problems\"\n",
     "draft: false\n",
     "freeze: true\n",
-    "categories:\n",
-    "  - Python\n",
-    "  - Tensorflow\n",
-    "  - Deep Learning\n",
     "---"
    ]
   },
