Renaming chapter titles

--- a/notebooks/01b-basic-regression.ipynb
+++ b/notebooks/01b-basic-regression.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Dealing with Regression Problems\"\n",
+    "title: \"Regression\"\n",
     "draft: false\n",
     "freeze: true\n",
     "---"
