--- a/notebooks/01c-basic-classification.ipynb
+++ b/notebooks/01c-basic-classification.ipynb
@@ -5,13 +5,14 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Dealing with Classification Problems\"\n",
+    "title: \"Classification\"\n",
     "draft: false\n",
     "freeze: true\n",
     "---"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
